plang/testing/logs/false-incorrect/158/program158.p.p
sTG :- hOD F, ((hQHVe G3mtc (HJPc0); ra (afdHl (Blcw) cP0q0 (z v7pP1)); j2E9f VKJ G tu709 XOb7; g)).
ml (xxrg (Y) Nq65 (Vy) (NnfOY)) (XvO9) (Z2W) :- (((xq Z (Y), tSu (XIv) hj (o Aks (gxZ (SXQ) (I))) (f (Y) NVp4w Fx (xJg (uh4D (qFPD A (cJ) BuL) (OK5g) (DmV)) (QnvI))), oK99 (QXFlq) t (A) xK))).

oyT4.

e9 (mZA s h9 GJqgV (eG (zl KS (A) zegYe (GC)) O)) :- x (t2P (rO0t uan) (ZQK) N jRab) (oni (Ni) (O) p) (h (a (x6X T0d C7r6)) (sgV58 (z w) tm POse (ZCAaY)) MWI0 G).

a :- vTh.
qzS (KLp) ZdEJV (ePqPw (IUz2)).

cZ :- (ie8r (FDIxX) k).

tY (Hi) (g6Xu2 (ABUxX)) (bFeOk (y (U) (v32Or e) z) w (M) ypGR) C.
f.
dT14L (kaI (y2 VTRIU) (LZwO) F).

x2 (lA0 v0 N T) (aoKN rb ygqHA) (s63F).

c HS (BqYlb).

? ((c, kqtZ m (TqcNO) (Vo); pGaRS; ((m (wCxcx e (ZdNs)))))).


